--- a/react-vite/index.html
+++ b/react-vite/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./public/Updatedlogo2.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aunt Angies Cookies</title>
 </head>
@@ -14,4 +15,19 @@
 
 </html>
 
-<!-- i want the logo image to be in the title, here is the route for it, "../../prepWork/logo.jpg" -->
+<!-- <!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Aunt Angies Cookies</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
+</html>
+ -->
